--- a/Black-Clover-th-ep-1.html
+++ b/Black-Clover-th-ep-1.html
@@ -1,209 +1,182 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย</title>
-  <link rel="icon" href="https://img2.pic.in.th/pic/039b1c3dd878efaf74.png" type="image/png" />
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
-    body {
-      margin: 0;
-      font-family: 'Kanit', sans-serif;
-      background: #141414;
-      color: #fff;
-    }
-    header {
-      background-color: #4caf50;
-      padding: 15px 20px;
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      flex-wrap: wrap;
-    }
-    .logo {
-      font-size: 1.8rem;
-      font-weight: bold;
-      color: white;
-      text-decoration: none;
-    }
-    nav {
-      display: flex;
-      gap: 10px;
-    }
-    nav a {
-      padding: 6px 12px;
-      color: white;
-      text-decoration: none;
-      font-weight: bold;
-      font-size: 1rem;
-    }
-    nav a:hover {
-      color: #c8facc;
-    }
-    main {
-      max-width: 1000px;
-      margin: 20px auto;
-      padding: 0 15px;
-    }
-    .video-title {
-      text-align: center;
-      font-size: 1.5rem;
-      color: #90ee90;
-      margin-bottom: 10px;
-      font-weight: 700;
-    }
-    .nav-buttons-top {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-    .nav-buttons-top button {
-      background-color: #4caf50;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin: 0 5px;
-      font-weight: bold;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .nav-buttons-top button:hover {
-      background-color: #66bb6a;
-    }
-    .video-wrapper {
-      position: relative;
-      width: 100vw;
-      height: calc(100vw * 9 / 16);
-      max-width: 100vw;
-      margin: 0 auto 20px;
-      background: #000;
-      cursor: pointer;
-      left: 50%;
-      right: 50%;
-      margin-left: -50vw;
-      margin-right: -50vw;
-    }
-    .video-wrapper iframe {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      border: none;
-      pointer-events: none;
-    }
-    .btn-group {
-      text-align: center;
-      margin-bottom: 30px;
-      max-width: 1000px;
-      margin-left: auto;
-      margin-right: auto;
-      flex-wrap: wrap;
-    }
-    .btn-group button {
-      background-color: #4caf50;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin: 8px 5px;
-      font-weight: bold;
-      font-size: 1rem;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    .btn-group button:hover {
-      background-color: #66bb6a;
-    }
-    footer {
-      text-align: center;
-      padding: 20px;
-      background-color: #1f1f1f;
-      color: #ccc;
-      font-size: 0.9rem;
-      margin-top: 40px;
-    }
-    #histats_wrapper {
-      width: 100%;
-      text-align: center;
-      margin-top: 30px;
-    }
-    #histatsC {
-      display: inline-block !important;
-      float: none !important;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Black Clover ตอนที่ 146 พากย์ไทย</title>
+  <link rel="icon" href="https://img2.pic.in.th/pic/039b1c3dd878efaf74.png" type="image/png" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+    body {
+      margin: 0;
+      font-family: 'Kanit', sans-serif;
+      background: #141414;
+      color: #fff;
+    }
+    header {
+      background-color: #ff3d00;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .logo {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: white;
+      text-decoration: none;
+    }
+    nav {
+      display: flex;
+      gap: 10px;
+    }
+    nav a {
+      padding: 6px 12px;
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
+      font-size: 1rem;
+    }
+    nav a:hover {
+      color: #ffccbc;
+    }
+    main {
+      max-width: 1000px;
+      margin: 20px auto;
+      padding: 0 15px;
+    }
+    .video-title {
+      text-align: center;
+      font-size: 1.5rem;
+      color: #ffa07a;
+      margin-bottom: 20px;
+      font-weight: 700;
+    }
+    .video-wrapper {
+      position: relative;
+      width: 100vw;
+      height: calc(100vw * 9 / 16);
+      max-width: 100vw;
+      margin: 0 auto 20px;
+      background: #000;
+      cursor: pointer;
+      left: 50%;
+      right: 50%;
+      margin-left: -50vw;
+      margin-right: -50vw;
+    }
+    .video-wrapper iframe {
+      position: absolute;
+      top: 0; left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+      pointer-events: none; /* ปิดชั่วคราวจนกว่าจะคลิกโฆษณา */
+    }
+    .btn-group {
+      text-align: center;
+      margin-bottom: 30px;
+      max-width: 1000px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .btn-group button {
+      background-color: #ff3d00;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin: 0 8px;
+      font-weight: bold;
+      font-size: 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .btn-group button:hover {
+      background-color: #ff7043;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #1f1f1f;
+      color: #ccc;
+      font-size: 0.9rem;
+      margin-top: 40px;
+    }
+    #histats_wrapper {
+      width: 100%;
+      text-align: center;
+      margin-top: 30px;
+    }
+    #histatsC {
+      display: inline-block !important;
+      float: none !important;
+    }
+  </style>
 </head>
 <body>
 
 <header>
-  <a href="/" class="logo">SSS ANIME</a>
-  <nav>
-    <a href="contact">ติดต่อแจ้งปัญหา</a>
-  </nav>
+  <a href="/" class="logo">Anime 888</a>
+  <nav>
+    <a href="contact">ติดต่อแจ้งปัญหา</a>
+  </nav>
 </header>
 
 <main>
-  <div class="video-title">Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย</div>
+  <div class="video-title">Black Clover แบล็คโคลเวอร์ ตอนที่ 146 พากย์ไทย</div>
 
-  <!-- ปุ่ม ก่อนหน้า | ทั้งหมด | ถัดไป -->
-  <div class="nav-buttons-top">
-    <button onclick="location.href='Black-Clover-th-ep-0.html'">⬅️ ก่อนหน้า</button>
-    <button onclick="location.href='Black-Clover-Thailand.html'">📋 ทั้งหมด</button>
-    <button onclick="location.href='Black-Clover-th-ep-2.html'">➡️ ถัดไป</button>
-  </div>
+  <div class="video-wrapper" id="videoWrapper" title="คลิกเพื่อดูต่อ">
+    <iframe id="videoPlayer" src="https://moji.team-indy.net/embed/l7kxT7Xe/" allow="autoplay" allowfullscreen title="Black Clover 146"></iframe>
+  </div>
 
-  <div class="video-wrapper" id="videoWrapper" title="คลิกเพื่อดูต่อ">
-    <iframe id="videoPlayer" src="https://moji.team-indy.net/embed/l7kxT7Xe/" allow="autoplay" allowfullscreen title="Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย"></iframe>
-  </div>
-
-  <div class="btn-group" id="btnGroup">
-    <button data-src="https://moji.team-indy.net/embed/l7kxT7Xe/">สำรอง 1</button>
-    <button data-src="https://akuma-player.xyz/play/85cc481f-f118-5179-83f8-27a3cd845ef0">สำรอง 2</button>
-    <button data-src="https://streaming.tonytonychopper.com/playback/f/0VFXbTu3/">สำรอง 3</button>
-  </div>
+  <div class="btn-group" id="btnGroup">
+    <button data-src="https://moji.team-indy.net/embed/l7kxT7Xe/">สำรอง 1</button>
+    <button data-src="https://streaming.tonytonychopper.com/playback/f/0VFXbTu3/">สำรอง 2</button>
+    <button data-src="https://mycdn-hd.xyz/video/db4195f88b8dae852e94bfcf0f2cc0b9">สำรอง 3</button>
+  </div>
 </main>
 
 <footer>
-  © 2025 SSS Anime — ดูอนิเมะออนไลน์ sss อนิเมะ sss anime พากย์ไทย ซับไทย ครบทุกแนว อนิเมะจีน
+  © 2025 Anime 888 — ดูอนิเมะออนไลน์ พากย์ไทย ซับไทย ครบทุกแนว
 </footer>
 
 <div id="histats_wrapper">
-  <div id="histats_counter"></div>
+  <div id="histats_counter"></div>
 </div>
 <script type="text/javascript">
-  var _Hasync = _Hasync || [];
-  _Hasync.push(['Histats.startgif', '1,4954367,4,10047,""']);
-  _Hasync.push(['Histats.fasi', '1']);
-  _Hasync.push(['Histats.track_hits', '']);
-  (function () {
-    var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-    hs.src = ('//s10.histats.com/js15_gif_as.js');
-    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-  })();
+  var _Hasync = _Hasync || [];
+  _Hasync.push(['Histats.startgif', '1,4954367,4,10047,""']);
+  _Hasync.push(['Histats.fasi', '1']);
+  _Hasync.push(['Histats.track_hits', '']);
+  (function () {
+    var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+    hs.src = ('//s10.histats.com/js15_gif_as.js');
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+  })();
 </script>
 
 <script>
-  const videoWrapper = document.getElementById('videoWrapper');
-  const videoPlayer = document.getElementById('videoPlayer');
-  const btnGroup = document.getElementById('btnGroup');
+  const videoWrapper = document.getElementById('videoWrapper');
+  const videoPlayer = document.getElementById('videoPlayer');
+  const btnGroup = document.getElementById('btnGroup');
 
-  let adClicked = false;
-  videoWrapper.addEventListener('click', () => {
-    if (!adClicked) {
-      window.open('https://otieu.com/4/9179557', '_blank');
-      adClicked = true;
-      videoPlayer.style.pointerEvents = "auto";
-    }
-  });
+  let adClicked = false;
+  videoWrapper.addEventListener('click', () => {
+    if (!adClicked) {
+      window.open('https://otieu.com/4/9179557', '_blank');
+      adClicked = true;
+      videoPlayer.style.pointerEvents = "auto";
+    }
+  });
 
-  btnGroup.querySelectorAll('button[data-src]').forEach(button => {
-    button.addEventListener('click', () => {
-      const src = button.getAttribute('data-src');
-      videoPlayer.src = src;
-    });
-  });
+  btnGroup.querySelectorAll('button').forEach(button => {
+    button.addEventListener('click', () => {
+      const src = button.getAttribute('data-src');
+      videoPlayer.src = src;
+    });
+  });
 </script>
 
 </body>
