--- a/Black-Clover-th-ep-1.html
+++ b/Black-Clover-th-ep-1.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Black Clover ตอนที่ 146 พากย์ไทย</title>
+  <title>Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย</title>
   <link rel="icon" href="https://img2.pic.in.th/pic/039b1c3dd878efaf74.png" type="image/png" />
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
@@ -14,7 +14,7 @@
       color: #fff;
     }
     header {
-      background-color: #ff3d00;
+      background-color: #4caf50;
       padding: 15px 20px;
       display: flex;
       align-items: center;
@@ -39,7 +39,7 @@
       font-size: 1rem;
     }
     nav a:hover {
-      color: #ffccbc;
+      color: #c8facc;
     }
     main {
       max-width: 1000px;
@@ -49,9 +49,28 @@
     .video-title {
       text-align: center;
       font-size: 1.5rem;
-      color: #ffa07a;
-      margin-bottom: 20px;
+      color: #90ee90;
+      margin-bottom: 10px;
       font-weight: 700;
+    }
+    .nav-buttons-top {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .nav-buttons-top button {
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      margin: 0 5px;
+      font-weight: bold;
+      font-size: 1rem;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+    .nav-buttons-top button:hover {
+      background-color: #66bb6a;
     }
     .video-wrapper {
       position: relative;
@@ -72,7 +91,7 @@
       width: 100%;
       height: 100%;
       border: none;
-      pointer-events: none; /* ปิดชั่วคราวจนกว่าจะคลิกโฆษณา */
+      pointer-events: none;
     }
     .btn-group {
       text-align: center;
@@ -80,13 +99,14 @@
       max-width: 1000px;
       margin-left: auto;
       margin-right: auto;
+      flex-wrap: wrap;
     }
     .btn-group button {
-      background-color: #ff3d00;
+      background-color: #4caf50;
       color: white;
       border: none;
       padding: 10px 20px;
-      margin: 0 8px;
+      margin: 8px 5px;
       font-weight: bold;
       font-size: 1rem;
       border-radius: 6px;
@@ -94,7 +114,7 @@
       transition: background-color 0.3s;
     }
     .btn-group button:hover {
-      background-color: #ff7043;
+      background-color: #66bb6a;
     }
     footer {
       text-align: center;
@@ -118,28 +138,34 @@
 <body>
 
 <header>
-  <a href="/" class="logo">Anime 888</a>
+  <a href="/" class="logo">SSS ANIME</a>
   <nav>
     <a href="contact">ติดต่อแจ้งปัญหา</a>
   </nav>
 </header>
 
 <main>
-  <div class="video-title">Black Clover แบล็คโคลเวอร์ ตอนที่ 146 พากย์ไทย</div>
+  <div class="video-title">Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย</div>
+
+  <div class="nav-buttons-top">
+    <button onclick="location.href='Black-Clover-th-ep-1.html'">⬅️ ก่อนหน้า</button>
+    <button onclick="location.href='Black-Clover-Thailand.html'">📋 ทั้งหมด</button>
+    <button onclick="location.href='Black-Clover-th-ep-2.html'">➡️ ถัดไป</button>
+  </div>
 
   <div class="video-wrapper" id="videoWrapper" title="คลิกเพื่อดูต่อ">
-    <iframe id="videoPlayer" src="https://moji.team-indy.net/embed/l7kxT7Xe/" allow="autoplay" allowfullscreen title="Black Clover 146"></iframe>
+    <iframe id="videoPlayer" src="https://moji.team-indy.net/embed/l7kxT7Xe/" allow="autoplay" allowfullscreen title="Black Clover แบล็คโคลเวอร์ ตอนที่ 1 พากย์ไทย"></iframe>
   </div>
 
   <div class="btn-group" id="btnGroup">
     <button data-src="https://moji.team-indy.net/embed/l7kxT7Xe/">สำรอง 1</button>
-    <button data-src="https://streaming.tonytonychopper.com/playback/f/0VFXbTu3/">สำรอง 2</button>
-    <button data-src="https://mycdn-hd.xyz/video/db4195f88b8dae852e94bfcf0f2cc0b9">สำรอง 3</button>
+    <button data-src="">สำรอง 2</button>
+    <button data-src="">สำรอง 3</button>
   </div>
 </main>
 
 <footer>
-  © 2025 Anime 888 — ดูอนิเมะออนไลน์ พากย์ไทย ซับไทย ครบทุกแนว
+  © 2025 SSS Anime — ดูอนิเมะออนไลน์ sss อนิเมะ sss anime พากย์ไทย ซับไทย ครบทุกแนว อนิเมะจีน
 </footer>
 
 <div id="histats_wrapper">
@@ -171,7 +197,7 @@
     }
   });
 
-  btnGroup.querySelectorAll('button').forEach(button => {
+  btnGroup.querySelectorAll('button[data-src]').forEach(button => {
     button.addEventListener('click', () => {
       const src = button.getAttribute('data-src');
       videoPlayer.src = src;
