--- a/Black-Clover-th-ep-1.html
+++ b/Black-Clover-th-ep-1.html
@@ -159,8 +159,8 @@
 
   <div class="btn-group" id="btnGroup">
     <button data-src="https://moji.team-indy.net/embed/l7kxT7Xe/">สำรอง 1</button>
-    <button data-src="">สำรอง 2</button>
-    <button data-src="">สำรอง 3</button>
+    <button data-src="https://mycdn-hd.xyz/video/db4195f88b8dae852e94bfcf0f2cc0b9">สำรอง 2</button>
+    <button data-src="https://streaming.tonytonychopper.com/playback/f/0VFXbTu3/">สำรอง 3</button>
   </div>
 </main>
 
