--- a/Black-Clover-th-ep-1.html
+++ b/Black-Clover-th-ep-1.html
@@ -159,7 +159,7 @@
 
   <div class="btn-group" id="btnGroup">
     <button data-src="https://moji.team-indy.net/embed/l7kxT7Xe/">สำรอง 1</button>
-    <button data-src="https://mycdn-hd.xyz/video/db4195f88b8dae852e94bfcf0f2cc0b9">สำรอง 2</button>
+    <button data-src="https://akuma-player.xyz/play/85cc481f-f118-5179-83f8-27a3cd845ef0">สำรอง 2</button>
     <button data-src="https://streaming.tonytonychopper.com/playback/f/0VFXbTu3/">สำรอง 3</button>
   </div>
 </main>
