--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
       color: #fff;
     }
 
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    a:hover {
+      text-decoration: none;
+      color: #ffa07a;
+    }
+
     header {
       background-color: #ff3d00;
       padding: 15px 20px;
@@ -40,7 +50,6 @@
       padding: 6px 12px;
       color: white;
       font-weight: bold;
-      text-decoration: none;
     }
 
     .menu-toggle {
